--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@ title:
 {% assign general = site.data.general.items %}
 
 <div class="video-container" id="video">
-    <video autoplay muted playsinline preload loop class="bg-video" poster="{{'/assets/video/poster.jpg'}}?{{cache_buster}}">
-        <source src="{{'/assets/video/seeds.mp4'}}?{{cache_buster}}" type="video/mp4">
+    <video autoplay muted playsinline preload loop class="bg-video" poster="{{'/assets/video/hero-poster.png'}}?{{cache_buster}}">
+        <source src="{{'/assets/video/hero-video.mp4'}}?{{cache_buster}}" type="video/mp4">
     </video>
-    <div class="headline d-none d-md-block">
-        <h1 class="text-white">{{general.headline}}</h1>
+    <div class="">
+        <!-- <h1 class="text-white">{{general.headline}}</h1> -->
+        <div data-svg-id="794720bd22ae4d1ba58b15a0440cb8f9.svg" data-svg-type="shape" data-display-mode="stretch" data-strokewidth="0" data-viewbox="0 0 200 200" data-preserve-viewbox="ignore" style="width: 87px; height: 57px; visibility: inherit;" data-angle="180" data-angle-style-location="style" class="style-k1i08bir" id="comp-k1i08b4d"><a href="https://www.aerofleetone.com" target="_self" data-keep-roots="true" data-anchor-comp-id="comp-k1ljqkpl" data-anchor="dataItem-k1ljqkqu" style="cursor:pointer" id="comp-k1i08b4dlink" class="style-k1i08birlink"><div style="stroke-width:0;fill-opacity:1;stroke:#ED1566;stroke-opacity:1;fill:rgba(255, 255, 255, 1)" class="style-k1i08bir_comp-k1i08b4d style-k1i08bir_non-scaling-stroke style-k1i08birsvg" id="comp-k1i08b4dsvg"><svg preserveAspectRatio="none" id="comp-k1i08b4dsvgcontent" data-bbox="19.5 47.5 161 105.001" viewBox="19.5 47.5 161 105.001" height="200" width="200" xmlns="http://www.w3.org/2000/svg" data-type="shape" role="img">
+            <g>
+                <path d="M100 52.558c5.054 0 10.111 1.912 13.944 5.735l55.772 55.611c7.668 7.646 7.668 20.158 0 27.804-3.833 3.823-8.887 5.735-13.944 5.735-5.054 0-10.108-1.912-13.941-5.735L100 100l-41.829 41.707c-3.835 3.823-8.889 5.735-13.944 5.735s-10.111-1.912-13.944-5.735c-7.668-7.646-7.668-20.158 0-27.804l55.772-55.61v-.001c3.834-3.823 8.891-5.734 13.945-5.734m0-5.058c-6.619 0-12.831 2.558-17.487 7.202l-55.772 55.611c-4.668 4.656-7.241 10.868-7.241 17.493 0 6.625 2.573 12.838 7.241 17.493 4.656 4.644 10.868 7.202 17.487 7.202s12.831-2.558 17.487-7.202L100 107.124l38.288 38.175c4.656 4.644 10.868 7.202 17.484 7.202 6.619 0 12.831-2.558 17.487-7.202 4.668-4.655 7.241-10.868 7.241-17.493s-2.573-12.838-7.241-17.493l-55.772-55.611C112.831 50.058 106.619 47.5 100 47.5z"></path>
+            </g>
+        </svg>
+        </div></a></div>
     </div>
 </div>
 
 <!-- intro section -->
 
-<div class="bg-light py-5">
+<!-- <div class="bg-light py-5">
     <a class="anchor" id="introduction"></a>
     <div class="container">
         <div class="d-md-none text-center mb-5">
-            <h1>{{general.headline}}</h1>
+            <h1>{{mission.headline}}</h1>
         </div>
         <p class="lead">{{general.description}}</p>
         <div class="row justify-content-center mt-4">
@@ -33,44 +39,100 @@ title:
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<!-- our mission section -->
 
 <div class="container pb-5 mb-5">
-    <h2 class="mt-5 pt-5 text-center">{{general.opps.heading}}</h2>
+    <a class="anchor" id="mission"></a>
+    <h2 class="mt-5 pt-5 text-center">{{general.mission.heading}}</h2>
+    {% for i in general.mission.items %}
+    {% assign carouselIndex = forloop.index %}
     <div class="row mt-3">
-        {% for i in general.opps.items %}
-            <div class="col-sm-6 col-md-4 col-12 mt-4 justify-content-center">
-                <div class="flip-card">
-                    <a aria-hidden="true" class="fliplink">
-                        <div {% if forloop.index == 1 %} id="firstflip" {% endif %} class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <div class="opps-circle">
-                                    <img src="{{i.icon}}" alt="{{i.heading}}">
-                                </div>
-                                <h5 class="mt-3 text-center px-4 font-weight-bold">{{i.heading}}</h5>
-                            </div>
-                            <div class="flip-card-back">
-                                <p>{{i.text}}</p>
-                            </div>
+            <div class="col-sm-6 col-12 mt-4 justify-content-center">
+                <div class="">
+                    <h5 class="mt-3 text-center px-4 font-weight-bold">{{i.heading}}</h5>
+                    <div class="">
+                        <p>{{i.text}}</p>
+                    </div>
+                </div>
+            </div>
+                <div id="carousel{{forloop.index}}" class="col-sm-6 col-12 carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        {% for j in i.img %}
+                        <li data-target="#carousel{{carouselIndex}}" data-slide-to="{{ forloop.index0 }}" {% if forloop.first == true %} class="active"{% endif %}></li>
+                        {% endfor %}
+                        <!-- <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
+                    </ol>
+                    <div class="carousel-inner">
+                        {% for j in i.img %}
+                        <div class="carousel-item {% if forloop.first %} active {% endif %}">
+                            <img class="d-block w-100" src="{{j}}" alt="First slide">
                         </div>
+                        {% endfor %}
+                    </div>
+                        <a class="carousel-control-prev" href="#carousel{{forloop.index}}" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
                     </a>
+                        <a class="carousel-control-next" href="#carousel{{forloop.index}}" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div class="col-12 row justify-content-center mt-4">
+        <div class="col-md-8">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe allowfullscreen class="embed-responsive-item" src="https://www.youtube.com/embed/6fk2A7VJme4?"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- unit section -->
+<div class="container pb-5 mb-5">
+    <a class="anchor" id="unit"></a>
+    <h2 class="mt-5 pt-5 text-center">{{general.unit.heading}}</h2>
+    <div class="row mt-3">
+        {% for i in general.unit.items %}
+            <!-- <div class="col-sm-6 col-md-4 col-12 mt-4 card" style="width: 18rem;">
+                    <div class="opps-circle">
+                         <img src="{{i.icon}}" alt="{{i.heading}}">
+                        <h5 class="mt-3 text-center px-4 font-weight-bold">{{i.heading}}</h5>
+                        <p>{{i.text}}</p>
+                    </div> 
+            </div> -->
+            <div class="card col-md-4" >
+                <img class="card-img-top" src="{{i.icon}}" alt="{{i.heading}}">
+                <div class="card-body">
+                  <h5 class="card-title font-weight-bold">{{i.heading}}</h5>
+                  <p class="card-text">{{i.text}}</p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                 </div>
             </div>
         {% endfor %}
     </div>
 </div>
-<!-- portfolio section -->
-{% assign port = site.data.general.items.portfolio %}
+
+<!-- timeline section -->
+{% assign time = site.data.general.items.timeline %}
 
 <div class="section bg-light">
-    <a class="anchor" id="portfolio"></a>
+    <a class="anchor" id="timeline"></a>
     <div class="container">
-        <h2 class="text-center">{{port.heading}}</h2>
-        <p class="mt-4">{{port.text}}</p>
-
-        {% include static_map.html %}
+        <h2 class="text-center">{{time.heading}}</h2>
+        <p class="mt-4">{{time.text}}</p>
+        <div class="row timeline-gif">
+            <img src="{{time.gif}}" class="img-fluid" alt="">
+        </div>
+        <!-- {% include static_map.html %} -->
         <!-- portfolio cards -->
-        <div class="card-deck mt-5">
+        <!-- <div class="card-deck mt-5">
             {% for i in port.items %}
                 {% assign remainder = forloop.index |modulo: 3 %}
                 <div class="card card-a">
@@ -102,7 +164,7 @@ title:
 
                 {% endif %}
             {% endfor %}
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -113,10 +175,10 @@ title:
     <a class="anchor" id="team"></a>
     <div class="container">
         <h2 class="text-center">{{team.heading}}</h2>
-        <div class="row justify-content-center mt-5">
+        <div class="row justify-content-center ">
             {% for i in team.items %}
-                <div class="col mb-5">
-                    <img class="img-fluid rounded-circle img-team" alt="{{i.name}}" src="{{i.img}}">
+                <div class="mb-5">
+                    <img class="img-fluid img-team" alt="{{i.name}}" src="{{i.img}}">
                     <h4 class="mb-0 mt-4 font-weight-bold">{{i.name}}
                         <a href="{{i.linkedin}}" target="_blank" rel="noopener"><img src="/assets/icon/linkedin.png" alt="{{i.name}}"></a>
                     </h4>
@@ -132,8 +194,8 @@ title:
 </div>
 
 <!-- media section -->
-{% assign media = site.data.general.items.media %}
-<div class="section bg-light">
+<!-- {% assign media = site.data.general.items.media %} -->
+<!-- <div class="section bg-light">
     <a class="anchor" id="media"></a>
     <div class="container">
         <h2 class="text-center">{{media.heading}}</h2>
@@ -156,14 +218,14 @@ title:
             {% endif %}
         {% endfor %}
     </div>
-</div>
+</div> -->
 
 <!-- contact section -->
 <div class="section">
     <a class="anchor" id="contact"></a>
     <div class="container">
         <h2 class="text-center">Contact Us</h2>
-        <p class="text-center my-3">Call us at +1 (303) 835-7901 or send us a message below and we will get back to you.</p>
+        <p class="text-center my-3">Call us at +1 (701) 214-7901 or send us a message below and we will get back to you.</p>
         <form action="https://submit-form.com/xfXf8CuT1ISwK-YGu-6EN" class="mt-5" id="contactForm">
             <input name="_redirect" type="hidden" value="agrofundone.com/index.html?contact=sent">
             <div class="row justify-content-center">
