--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title:
     <video autoplay muted playsinline preload loop class="bg-video" poster="{{'/assets/video/hero-poster.png'}}?{{cache_buster}}">
         <source src="{{'/assets/video/hero-video.mp4'}}?{{cache_buster}}" type="video/mp4">
     </video>
-    <a class="smooth-scroll" href="#mission">
+    <a class="smooth-scroll d-none d-sm-block" href="#mission">
         <span class="pulse-button"><img class="pulse-icon img-fluid" src="/assets/img/chevron-down.png"></span>
     </a>
 </div>
@@ -106,6 +106,20 @@ title:
     <div class="container">
         <h2 class="text-center">{{time.heading}}</h2>
         <p class="mt-4">{{time.text}}</p>
+        <div class="row my-5 justify-content-center flip-line">
+            {% for i in time.items %}
+                <div class="col-12 col-sm-4 col-lg-2 mb-3">
+                    <div class="flip-card">
+                        <div class="flip-card-front d-flex justify-content-center align-items-center">
+                            <h3 class="text-center">{{i.year}}</h3>
+                        </div>
+                        <div class="flip-card-back d-flex align-items-center">
+                            <p class="p-2">{{i.text}}</p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
         <div class="row timeline-gif">
             <img src="{{time.gif}}" class="img-fluid" alt="">
         </div>
