--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title:
 {% assign general = site.data.general.items %}
 
 <div class="video-container" id="video">
-    <video autoplay muted playsinline preload loop class="bg-video" poster="{{'/assets/video/hero-poster.png'}}?{{cache_buster}}">
+    <video autoplay muted playsinline preload loop class="bg-video" poster="{{'/assets/video/hero-poster.jpg'}}?{{cache_buster}}">
         <source src="{{'/assets/video/hero-video.mp4'}}?{{cache_buster}}" type="video/mp4">
     </video>
     <a class="smooth-scroll d-none d-sm-block" href="#mission">
@@ -120,9 +120,6 @@ title:
                 </div>
             {% endfor %}
         </div>
-        <div class="row timeline-gif">
-            <img src="{{time.gif}}" class="img-fluid" alt="">
-        </div>
     </div>
 </div>
 
@@ -164,7 +161,6 @@ title:
                 {% assign remainder = forloop.index |modulo: 4 %}
                 <div class="card news-card">
                     <a href="{{i.url}}">
-
                         <img src="{{i.img}}" alt="{{i.title}}" class="card-img-top"/>
                         <div class="card-body">
                             <h4>{{i.title}}</h4>
@@ -173,7 +169,6 @@ title:
                             </div>
                         </div>
                     </a>
-
                 </div>
                 {% if remainder == 0 %}
                 </div>
