Fix form callback url

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ title:
                 <h3>Inquiries</h3>
                 <p class="my-3">For inquiries please call 1-701-214-4177 or fill out the form below.</p>
                 <form action="https://submit-form.com/BrecKxGVBJlpGTTCYvyT5" class="mt-5" id="contactForm">
-                    <input name="_redirect" type="hidden" value="aerofleetone.com.com/index.html?contact=sent">
+                    <input name="_redirect" type="hidden" value="aerofleetone.com/index.html?contact=sent">
 
                     <div class="form-group">
                         <label for="contactFormName">Name<sup>*</sup>
@@ -231,11 +231,8 @@ title:
                     <div class="g-recaptcha" data-sitekey="6LeK68YZAAAAAGIpK5n851BT6yOXSnwKuXXJM0jX"></div>
                     <button class="btn st-btn mt-3" type="submit">Send</button>
                 </form>
-                <div class="row justify-content-center mt-5 d-none" id="contactSuccess">
-                    <div class="col-sm-6">
-                        <h5>Thank you for your message. We will be in touch shortly.</h5>
-                    </div>
-
+                <div class="mt-5 d-none" id="contactSuccess">
+                    <h5>Thank you for your message. We will be in touch shortly.</h5>
                 </div>
             </div>
             <div class="col-md-5 offset-md-2">
