Optimize index page, unpublish robots.txt

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ title:
     <div class="row justify-content-center py-5 mt-4">
         <div class="col-md-6">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe allowfullscreen class="embed-responsive-item" src="https://www.youtube.com/embed/6fk2A7VJme4?"></iframe>
+                <iframe allowfullscreen class="embed-responsive-item" src="https://www.youtube.com/embed/6fk2A7VJme4?" title="Mark Erjavec on the AeroFleetOne Business Case"></iframe>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@ title:
         <h2 class="mt-5 pt-5 text-center">{{general.where.heading}}</h2>
         <p class="lead text-center mb-5">{{general.where.text}}</p>
         <div class="row justify-content-center">
-            <div class="col-md-6"><img class="img-fluid" src="{{general.where.img}}"></div>
+            <div class="col-md-6"><img class="img-fluid" src="{{general.where.img}}" alt="Where we operate"></div>
         </div>
 
     </div>
