--- a/index.html
+++ b/index.html
@@ -59,11 +59,16 @@ title:
 </div>
 
 <div class="bg-light">
-    <div class="row justify-content-center py-5 mt-4">
-        <div class="col-md-6">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe allowfullscreen class="embed-responsive-item" src="https://www.youtube.com/embed/6fk2A7VJme4?" title="Mark Erjavec on the AeroFleetOne Business Case"></iframe>
-            </div>
+    <div class="container">
+        <div class="row justify-content-center py-5 mt-4">
+            {% for i in general.videos %}
+                <div class="col-md-6">
+                    <h4>{{i.title}}</h4>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe allowfullscreen class="embed-responsive-item" src="{{i.url}}" title="{{i.title}}"></iframe>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 </div>
