Add destiny, allan, maria to page

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ title:
         </h2>
         <div class="row justify-content-center ">
             {% for i in team.items %}
-                <div class="mb-3 text-center">
+                <div class="col-md-3 mb-3 text-center">
                     <img class="img-fluid img-team" alt="{{i.name}}" src="{{i.img}}">
                     <h4 class="mb-0 mt-4 font-weight-bold">{{i.name}}
                         <a href="{{i.linkedin}}" target="_blank" rel="noopener"><img src="/assets/icon/linkedin.png" alt="{{i.name}}"></a>
