Update wording and destiny picture

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ title:
         <div class="row mt-5">
             <div class="col-md-5 mb-4">
                 <h3>Inquiries</h3>
-                <p class="my-3">For inquiries please call 1-701-214-4177 or fill out the form below.</p>
+                <p class="my-3">For inquiries please call +1 (701) 214-4177 or fill out the form below.</p>
                 <form action="https://submit-form.com/BrecKxGVBJlpGTTCYvyT5" class="mt-5" id="contactForm">
                     <input name="_redirect" type="hidden" value="aerofleetone.com/index.html?contact=sent">
 
