Remove news for now

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ title:
 </div>
 
 <!-- news section -->
-<div class="section bg-light">
+<!-- <div class="section bg-light">
     <a class="anchor" id="news"></a>
     <div class="container">
         <h2 class="text-center">Latest News</h2>
@@ -209,7 +209,7 @@ title:
             {% endfor %}
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- contact section -->
 <div class="section">
