install html-proofer, remove dead link to news from navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title:
         <source src="{{'/assets/video/hero-video.mp4'}}?{{cache_buster}}" type="video/mp4">
     </video>
     <a class="smooth-scroll d-none d-sm-block" href="#mission">
-        <span class="pulse-button"><img class="pulse-icon img-fluid" src="/assets/img/chevron-down.png"></span>
+        <span class="pulse-button"><img class="pulse-icon img-fluid" src="/assets/img/chevron-down.png" alt="Down Button"></span>
     </a>
 </div>
 
