--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@ title: Profile
                             <h5 class="card-title mb-1 fw-bold">{{i.name}} <span><a href="{{i.linkedin}}" target="_blank"><i class="ms-1 bi-linkedin fs-4"></i></a></span></h5>
                             <p class="fw-bold">{{i.title}}</p>
                             <p>{{i.text}}</p>
-                            <p class="card-text mt-auto"><a href="{{i.mail}}" class="text-decoration-none">{{i.mail}}</a></p>
+                            <p class="card-text mt-auto"><a href="mailto:{{i.mail}}" class="text-decoration-none">{{i.mail}}</a></p>
                         </div>
                     </div>
                 </div>
